[tool.poetry]
name = "pathfinding"
version = "0.1.0"
description = ""
authors = ["Shakya Majumdar <shakyamajumdar1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=120
